tests/error/struct/struct_constr.mml
type s = {s: int; c : int ; }

{s = 3; c = true; }
